--- a/styles/styles.css
+++ b/styles/styles.css
@@ -255,11 +255,31 @@
   text-align: center;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body a {
+  text-decoration: none;
+  color: #202027;
+}
+
+.center {
+  padding-right: calc(50% - 600px);
+  padding-left: calc(50% - 600px);
+}
+
 @media (max-width: 768px) {
   body {
     overflow-x: hidden;
   }
-  body .center {
+  .center {
     padding-right: 16px;
     padding-left: 16px;
   }
@@ -394,22 +414,4 @@
   .games-gallery .games-gallery__catalog:last-child {
     padding-bottom: 24px;
   }
-}
-html {
-  scroll-behavior: smooth;
-}
-
-body {
-  font-family: "Montserrat", sans-serif;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-body a {
-  text-decoration: none;
-  color: #202027;
-}
-body .center {
-  padding-right: calc(50% - 600px);
-  padding-left: calc(50% - 600px);
 }/*# sourceMappingURL=styles.css.map */
