--- a/styles/styles.css
+++ b/styles/styles.css
@@ -221,7 +221,7 @@
   background-position: center;
   padding-bottom: 144px;
 }
-.games-gallery .games-gallery__title {
+.games-gallery__title {
   margin: 0;
   padding-top: 96px;
   padding-bottom: 72px;
@@ -231,7 +231,7 @@
   line-height: 78px;
   text-align: left;
 }
-.games-gallery .games-gallery__catalog {
+.games-gallery__catalog {
   margin-bottom: 32px;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -240,12 +240,12 @@
   background-color: #fff;
   border-radius: 30px;
 }
-.games-gallery .games-gallery__catalog .catalog-item {
+.games-gallery__catalog .catalog-item {
   padding-left: 48px;
   padding-top: 48px;
   grid-column: span 6;
 }
-.games-gallery .games-gallery__catalog .catalog-item .catalog-item__title {
+.games-gallery__catalog .catalog-item__title {
   margin-top: 48px;
   margin-bottom: 24px;
   font-size: 48px;
@@ -253,14 +253,14 @@
   line-height: 59px;
   text-align: left;
 }
-.games-gallery .games-gallery__catalog .catalog-item .catalog-item__subtitle {
+.games-gallery__catalog .catalog-item__subtitle {
   margin-bottom: 36px;
   font-size: 24px;
   font-weight: 400;
   line-height: 32px;
   text-align: left;
 }
-.games-gallery .games-gallery__catalog .catalog-item .catalog-item__btn {
+.games-gallery__catalog .catalog-item__btn {
   background-color: #202027;
   color: #fff;
   border-radius: 60px;
@@ -272,12 +272,12 @@
   height: 66px;
   margin-bottom: 84px;
 }
-.games-gallery .games-gallery__catalog .catalog-item .catalog-item__btn:hover {
+.games-gallery__catalog .catalog-item__btn:hover {
   background-color: #fff;
   color: #202027;
 }
 @media (max-width: 768px) {
-  .games-gallery .games-gallery__catalog .catalog-item .catalog-item__btn {
+  .games-gallery__catalog .catalog-item__btn {
     font-size: 16px;
     font-weight: 600;
     line-height: 141.69%;
@@ -285,7 +285,7 @@
     height: 55px;
   }
 }
-.games-gallery .games-gallery__catalog .catalog-img {
+.games-gallery__catalog .catalog-img {
   display: flex;
   grid-column: span 6;
   background-repeat: no-repeat;
@@ -293,10 +293,10 @@
   background-size: cover;
   border-radius: 30px;
 }
-.games-gallery .games-gallery__catalog:nth-child(odd) .catalog-item {
+.games-gallery__catalog:nth-child(odd) .catalog-item {
   order: 1;
 }
-.games-gallery .games-gallery__catalog:last-child {
+.games-gallery__catalog:last-child {
   margin-bottom: unset;
 }
 
