--- a/styles/_mixin.scss
+++ b/styles/_mixin.scss
@@ -8,10 +8,13 @@
     font-weight: 600;
     width: 247px;
     height: 66px;
-    &:hover {
+    @media (hover: hover) {
+       &:hover {
         background-color: $light;
         color: $dark;
+    } 
     }
+    
     @media (max-width: 768px) {
         font-size: 16px;
         font-weight: 600;
@@ -22,8 +25,11 @@
 }
 @mixin anim-scale {
     transition: 0.5s;
+    @media (hover: hover) {
     &:hover {
         transform: scale(1.1);
 
     }
+}
+        
 }
