--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -1,9 +1,11 @@
 .header {
-    max-width: 1440px;
+    max-width: 100vw;
     max-height: 800px;
-    background-image: url('../img/hero_img.jpeg');
+    background-color: $accent-light;
+    background-image: url('../img/star-header.svg');
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: clamp(42%, 2vw, 100%);
+    background-size: clamp(162%, 2vw, 100%) clamp(145%, 2vw, 100%);
 
 }
 .header__hero {
@@ -46,7 +48,7 @@
     
     &__wrapper {
         background-color: $accent-dark;
-        max-width: 1440px;
+        max-width: 100vw;
         height: 90px;
         overflow: hidden;
         margin: 0 auto;
@@ -82,13 +84,13 @@
 }
 .gams-conteiner {
     background: $dark;
-    max-width: 1440px;
+    max-width: 100vw;
     height: 100%;
     margin: 0 auto;
     background-image: url(../img/stars-about.svg);
-    background-size: 108% 110%;
+    background-size: 105% 63%;
     background-repeat: no-repeat;
-    background-position: 32px -310px;
+    // background-position: 32px -310px;
     
 
 }
@@ -178,7 +180,7 @@
     }
     .gallery-conteiner {
         background: $dark;
-    max-width: 1440px;
+    max-width: 100vw;
     height: 100%;
     margin: 0 auto;
     background-image: url(../img/stars-game.svg);
@@ -188,7 +190,7 @@
 
     }
     .games-gallery {
-        max-width: 1440px;
+        max-width: 100vw;
         padding-bottom: 144px;
         .games-gallery__title {
             margin: 0;
@@ -261,7 +263,7 @@
     justify-content: center;
     align-items: center;
     background-color: $accent-dark;
-    max-width: 1440px;
+    max-width: 100vw;
     height: 150px;
     &__text {
         font-size: 24px;
