--- a/styles/_mobile.scss
+++ b/styles/_mobile.scss
@@ -10,7 +10,7 @@
     }
     
 .header {
-    max-width: 1440px;
+    max-width: 100vw;
     max-height: 800px;
     background-image: url('../img/hero_mobile.jpeg');
     background-repeat: no-repeat;
