--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,11 +30,13 @@
 }
 
 .header {
-  max-width: 1440px;
+  max-width: 100vw;
   max-height: 800px;
-  background-image: url("../img/hero_img.jpeg");
+  background-color: #E1FF8F;
+  background-image: url("../img/star-header.svg");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: clamp(42%, 2vw, 100%);
+  background-size: clamp(162%, 2vw, 100%) clamp(145%, 2vw, 100%);
 }
 
 .header__hero {
@@ -97,7 +99,7 @@
 }
 .tag__wrapper {
   background-color: #BCEC30;
-  max-width: 1440px;
+  max-width: 100vw;
   height: 90px;
   overflow: hidden;
   margin: 0 auto;
@@ -131,13 +133,12 @@
 
 .gams-conteiner {
   background: #202027;
-  max-width: 1440px;
+  max-width: 100vw;
   height: 100%;
   margin: 0 auto;
   background-image: url(../img/stars-about.svg);
-  background-size: 108% 110%;
+  background-size: 105% 63%;
   background-repeat: no-repeat;
-  background-position: 32px -310px;
 }
 
 .games-info__title {
@@ -224,7 +225,7 @@
 
 .gallery-conteiner {
   background: #202027;
-  max-width: 1440px;
+  max-width: 100vw;
   height: 100%;
   margin: 0 auto;
   background-image: url(../img/stars-game.svg);
@@ -234,7 +235,7 @@
 }
 
 .games-gallery {
-  max-width: 1440px;
+  max-width: 100vw;
   padding-bottom: 144px;
 }
 .games-gallery .games-gallery__title {
@@ -323,7 +324,7 @@
   justify-content: center;
   align-items: center;
   background-color: #BCEC30;
-  max-width: 1440px;
+  max-width: 100vw;
   height: 150px;
 }
 .footer__text {
@@ -363,7 +364,7 @@ body a {
     padding-left: 16px;
   }
   .header {
-    max-width: 1440px;
+    max-width: 100vw;
     max-height: 800px;
     background-image: url("../img/hero_mobile.jpeg");
     background-repeat: no-repeat;
