--- a/styles/_mobile.scss
+++ b/styles/_mobile.scss
@@ -11,11 +11,9 @@
     
 .header {
     max-width: 100vw;
-    max-height: 800px;
-    background-image: url('../img/hero_mobile.jpeg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center; 
+    max-height: 649px;
+    background-position: 45vw -29vw, 11% 11%, 90% 94%;
+    background-size: 97%, 20%, 20%;
 }
 .tag {
     height: 51px;
