--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,10 +33,10 @@
   max-width: 100vw;
   max-height: 800px;
   background-color: #E1FF8F;
-  background-image: url("../img/star-header.svg");
+  background-image: url("../img/stars-header-big.svg"), url("../img/stars-header-group-1.svg"), url("../img/stars-header-group-2.svg");
   background-repeat: no-repeat;
-  background-position: clamp(42%, 2vw, 100%);
-  background-size: clamp(162%, 2vw, 100%) clamp(145%, 2vw, 100%);
+  background-position: 66% 91%, 35% 18%, 47% 79%;
+  background-size: 33%, 4%, 4%;
 }
 
 .header__hero {
@@ -136,9 +136,10 @@
   max-width: 100vw;
   height: 100%;
   margin: 0 auto;
-  background-image: url(../img/stars-about.svg);
-  background-size: 105% 63%;
   background-repeat: no-repeat;
+  background-image: url(../img/stars-big.svg), url(../img/star-game-info.svg);
+  background-size: 20vw, 3vw;
+  background-position: 53vw 0vw, 29vw 20vw;
 }
 
 .games-info__title {
@@ -365,11 +366,9 @@ body a {
   }
   .header {
     max-width: 100vw;
-    max-height: 800px;
-    background-image: url("../img/hero_mobile.jpeg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    max-height: 649px;
+    background-position: 45vw -29vw, 11% 11%, 90% 94%;
+    background-size: 97%, 20%, 20%;
   }
   .tag {
     height: 51px;
@@ -543,13 +542,16 @@ body a {
     padding-bottom: 24px;
   }
 }
-@media (max-width: 1440px) {
-  .center {
-    padding-left: 20px;
-    padding-right: 20px;
+@media (min-width: 787px) and (max-width: 1440px) {
+  .header {
+    background-position: 46vw 91%, 2% 14%, 64% 75%;
+    background-size: 96%, 11%, 10%;
   }
   .gams-conteiner {
     max-width: unset;
+    background-repeat: no-repeat;
+    background-size: 49vw, 4vw;
+    background-position: 61vw 1vw, 3vw 56vw;
   }
   .gallery-conteiner {
     width: unset;
