--- a/styles/styles.css
+++ b/styles/styles.css
@@ -542,6 +542,12 @@ body a {
     padding-bottom: 24px;
   }
 }
+@media (max-width: 1220px) {
+  .center {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
 @media (min-width: 787px) and (max-width: 1440px) {
   .header {
     background-position: 46vw 91%, 2% 14%, 64% 75%;
